--- a/Weitianshi/pages/message/beAddedContacts/beAddedContacts.wxml
+++ b/Weitianshi/pages/message/beAddedContacts/beAddedContacts.wxml
@@ -26,12 +26,10 @@
                   <image src="{{item.user_avatar_url}}" class="t-userPic" wx:if="{{item.user_avatar_url}}"></image>
                   <view class="t-userName">{{item.user_real_name}}</view>
                   <view class="t-userPart flex" wx:if="{{item.user_groups[0].group_title}}">
-                    <!-- <image src="/img/icon-renzheng@2x.png" class="t-renzheng"></image>
-          <view class="t-userPart1">{{item.authentication[0].group_title}}</view> -->
                     <image class="t-renzheng" wx:if="{{item.user_groups[0].group_title=='投资方'}}" src="/img/img-touziren@2x.png"></image>
                     <image class="t-renzheng" wx:if="{{item.user_groups[0].group_title=='买方FA'}}" src="/img/img-maifang1@2x.png"></image>
                   </view>
-                  <view class="t-record">{{item.active_status}}</view>
+                  <view class="t-record" wx:if="{{item.active_status}}">{{item.active_status}}</view>
                   <view class="t-user_text" wx:if="{{item.user_avatar_text}}">{{item.user_avatar_text}}</view>
 
                 </view>
