--- a/Weitianshi/pages/oneKeyResearch/oneKeyResearch.wxml
+++ b/Weitianshi/pages/oneKeyResearch/oneKeyResearch.wxml
@@ -1,12 +1,25 @@
 <include src='/utils/wxml/projectDetail' />
-<view class=" flex floatBtn flexBox" hidden="{{currentTab==1}}">
-  <view class="collectBox" bindtap="collectProject">
-    <image src="/img/icon-shoucang@2x.png" class="collectPic"></image>
+<view class="flex t-aboutNetwork">
+  <view class="t-flexBox" hover-class="t-hoverColor" bindtap="moreProject">
+    <image src='/img/icon-shouye@2x.png' class="t-shopPic"></image>
+    <view class='t-shopBlock'>首页</view>
   </view>
-  <view class="contactProject" catchtap="contactPerson">联系项目方</view>
-  <view class="businessBook" catchtap="businessBook">商业计划书</view>
+  <view class="t-line"></view>
+  <view class="t-flexBox">
+    <view class='t-shopBlock' wx:if="{{score}}" bindtap="projectRemark" hover-class="t-hoverColor">
+      <image src='/img/icon-pingjia@2x.png' class="t-shopPic"></image>
+      评价</view>
+  </view>
+  <view class="t-line"></view>
+  <view class="t-flexBox" bindtap="maintainProject" hover-class="t-hoverColor">
+    <image src='/img/icon-fenxiang@2x.png' class="t-shopPic"></image>
+    <button class='t-shopBlock' open-type="share">分享</button>
+  </view>
+  <view class="t-line"></view>
+  <view class="t-flexBox" catchtap="businessBook" hover-class="t-hoverColor">
+    <image src='/img/icon-jihuashu@2x.png' class="t-shopPic"></image>
+    <view class='t-shopBlock'>商业计划书</view>
+  </view>
+  <view class="t-line"></view>
+  <view class='t-creatProject' catchtap="contactPerson" hover-class="t-redColor">联系项目方</view>
 </view>
-<view class=" flex floatBtn flexBox jigou" bindtap='toMap' hidden="{{currentTab==0||currentTab==2 }}">
-     机构版买家图谱
-</view>
-
