--- a/Weitianshi/utils/wxml/projectDetail.wxml
+++ b/Weitianshi/utils/wxml/projectDetail.wxml
@@ -252,5 +252,9 @@
     <button class="btn" hover-class='t-other-button-hover' bindtap="yesBtn" disabled="{{disabled}}">确定</button>
   </view>
 </view>
+<button open-type="contact" class="t-contact">
+  <image class="service" src="/img/btn-lianxikefu@2x.png">
+  </image>
+</button>
 <!--没有更多-->
 <view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
