--- a/Weitianshi/pages/discoverProject/discoverProject.wxml
+++ b/Weitianshi/pages/discoverProject/discoverProject.wxml
@@ -72,78 +72,77 @@
     <view class="btn" hover-class='t-other-button-hover' bindtap="createProjectPc">扫一扫</view>
   </view>
 </view> -->
-
-<view class="searchBox" bindtap='searchMore'>
-  <view class="seachSth flex">
-    <icon type="search" size="14" class="search_icon1"></icon>
-    <label> 搜个关键词试试</label>
+<view style='margin-top:96rpx;'>
+  <view class="searchBox" bindtap='searchMore'>
+    <view class="seachSth flex">
+      <icon type="search" size="14" class="search_icon1"></icon>
+      <label> 搜个关键词试试</label>
+    </view>
   </view>
-</view>
-<!--banner轮播  -->
-<swiper class='banner' autoplay='true' current='{{bannerIndex}}' interval='4000' duration='500' circular='true' indicator-dots='true' indicator-active-color='#ffffff' indicator-color='rgba(255,255, 255, .3)'>
-  <block wx:for="{{imgUrls}}" wx:key='item'>
-    <swiper-item>
-      <image src="{{item}}" class="slide-image" data-index='{{index}}' bindtap='bannerLink' />
-    </swiper-item>
-  </block>
-</swiper>
+  <scroll-view style="height:2000rpx;" scroll-y="true" bindscrolltolower='loadMore'>
+    <!--banner轮播  -->
+    <swiper class='banner' autoplay='true' current='{{bannerIndex}}' interval='4000' duration='500' circular='true' indicator-dots='true' indicator-active-color='#ffffff' indicator-color='rgba(255,255, 255, .3)'>
+      <block wx:for="{{imgUrls}}" wx:key='item'>
+        <swiper-item>
+          <image src="{{item}}" class="slide-image" data-index='{{index}}' bindtap='bannerLink' />
+        </swiper-item>
+      </block>
+    </swiper>
 
-<view class='jumpBox flex'>
-  <template is="jumpBlock" data="{{text:'投资机构',tapName:'jumpOrg',src:'/img/icon-touzijigou@2x.png'}}"></template>
-  <template is="jumpBlock" data="{{text:'投资人',tapName:'jumpInvestor',src:'/img/icon-touziren@2x.png'}}"></template>
-  <template is="jumpBlock" data="{{text:'FA融资顾问',tapName:'jumpFinancingAdvisor',src:'/img/icon-FA@2x.png'}}"></template>
-  <template is="jumpBlock" data="{{text:'潜在投资方',tapName:'potentialInvestor',src:'/img/icon-qianzai@2x.png'}}"></template>
-</view>
+    <view class='jumpBox flex'>
+      <template is="jumpBlock" data="{{text:'投资机构',tapName:'jumpOrg',src:'/img/icon-touzijigou@2x.png'}}"></template>
+      <template is="jumpBlock" data="{{text:'投资人',tapName:'jumpInvestor',src:'/img/icon-touziren@2x.png'}}"></template>
+      <template is="jumpBlock" data="{{text:'FA融资顾问',tapName:'jumpFinancingAdvisor',src:'/img/icon-FA@2x.png'}}"></template>
+      <template is="jumpBlock" data="{{text:'潜在投资方',tapName:'potentialInvestor',src:'/img/icon-qianzai@2x.png'}}"></template>
+    </view>
 
-<view class="selectProject">微天使FA精选项目</view>
+    <view class="selectProject">微天使FA精选项目</view>
 
-<scroll-view style="height:2000rpx;" scroll-y="true" bindscrolltolower='loadMore'>
-  <block wx:for="{{slectProject}}" wx:key="{{index}}">
-    <view class="selectProjectBox" data-project="{{item.project_id}}" hover-class='t-hoverColor' catchtap="projectDetail">
-      <view class="describle" wx:if="{{item.pro_intro != ''}}">{{item.pro_intro}}</view>
-      <image src="/img/img-dujia@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 1}}"></image>
-      <view class='flex industryBox'>
-        <block wx:for="{{item.pro_industry}}" wx:key="{{index}}" wx:for-item='industry'>
-          <view class="allIndustry">{{industry.industry_name}}</view>
-        </block>
-      </view>
-      <view class='flex otherInfo'>
-        <view class="allProjectDetail flex " wx:if="{{item.pro_area != ''||item.pro_finance_stock_after!=0||item.pro_stage!=''||item.pro_scale!=''}}">
-          <view class="projectDetailLine" wx:if="{{item.pro_scale != ''}}">{{item.pro_scale.scale_money}} </view>
-          <view class="projectDetailLine" wx:if="{{item.pro_finance_stock_after != ''}}">· {{item.pro_finance_stock_after}}% </view>
-          <view class="projectDetailLine" wx:if="{{item.pro_stage != ''}}"> · {{item.pro_stage.stage_name}}</view>
-          <view class="projectDetailLine" wx:if="{{item.pro_area != ''}}">· {{item.pro_area.area_title}}</view>
+    <block wx:for="{{slectProject}}" wx:key="{{index}}">
+      <view class="selectProjectBox" data-project="{{item.project_id}}" hover-class='t-hoverColor' catchtap="projectDetail">
+        <view class="describle" wx:if="{{item.pro_intro != ''}}">{{item.pro_intro}}</view>
+        <image src="/img/img-dujia@2x.png" class="projectDetailType" wx:if="{{item.is_exclusive == 1}}"></image>
+        <view class='flex industryBox'>
+          <block wx:for="{{item.pro_industry}}" wx:key="{{index}}" wx:for-item='industry'>
+            <view class="allIndustry">{{industry.industry_name}}</view>
+          </block>
         </view>
-      </view>
-      <view class="userInfo flex">
-        <image src="{{item.user.investor_logo_url}}" class="userPic" wx:if="{{item.user.investor_logo_url}}" />
-        <view class="userPicText flex " wx:if="{{item.user.investor_logo_text}}">{{item.user.investor_logo_text}}</view>
-        <view class="userInfoRight">
-          <view class='userName'>{{item.user.user_name}}</view>
-          <view class='userCompany'>
-            <label>{{item.user.user_career}}</label> ·
-            <label>{{item.user.user_company}}</label>
+        <view class='flex otherInfo'>
+          <view class="allProjectDetail flex " wx:if="{{item.pro_area != ''||item.pro_finance_stock_after!=0||item.pro_stage!=''||item.pro_scale!=''}}">
+            <view class="projectDetailLine" wx:if="{{item.pro_scale != ''}}">{{item.pro_scale.scale_money}} </view>
+            <view class="projectDetailLine" wx:if="{{item.pro_finance_stock_after != ''}}">· {{item.pro_finance_stock_after}}% </view>
+            <view class="projectDetailLine" wx:if="{{item.pro_stage != ''}}"> · {{item.pro_stage.stage_name}}</view>
+            <view class="projectDetailLine" wx:if="{{item.pro_area != ''}}">· {{item.pro_area.area_title}}</view>
+          </view>
+        </view>
+        <view class="userInfo flex">
+          <image src="{{item.user.investor_logo_url}}" class="userPic" wx:if="{{item.user.investor_logo_url}}" />
+          <view class="userPicText flex " wx:if="{{item.user.investor_logo_text}}">{{item.user.investor_logo_text}}</view>
+          <view class="userInfoRight">
+            <view class='userName'>{{item.user.user_name}}</view>
+            <view class='userCompany'>
+              <label>{{item.user.user_career}}</label> ·
+              <label>{{item.user.user_company}}</label>
+            </view>
+          </view>
+        </view>
+        <view class='userLine'></view>
+        <view class="applyProjcet flex">
+          <image class="personNumPic" src='/img/icon-chakan@2x.png'></image>
+          <view class="personNum">{{item.view_count}}人</view>
+          <view class="t-interest flex">
+            <view class="appling" wx:if="{{item.relationship_button == 0}}">申请中</view>
+            <view class="t-toAccreditation project-applicationm" wx:if="{{item.relationship_button == 4}}" data-project="{{item.project_id}}" hover-class='t-other-button-hover' hover-stop-propagation='true' catchtap="matchApply">申请查看</view>
+            <view class="refuseToRead" wx:if="{{item.relationship_button == 1}}">同意查看</view>
+            <view class="refuseToRead t-readed" wx:if="{{item.relationship_button == 3}}">推送给我</view>
+            <view wx:if="{{item.relationship_button == 5}}"></view>
+            <view class="t-toAccreditation" wx:if="{{item.relationship_button == 2}}" data-project="{{item.project_id}}" data-content="{{1}}" catchtap="matchApply">重新申请</view>
           </view>
         </view>
       </view>
-      <view class='userLine'></view>
-      <view class="applyProjcet flex">
-        <image class="personNumPic" src='/img/icon-chakan@2x.png'></image>
-        <view class="personNum">{{item.view_count}}人</view>
-        <view class="t-interest flex">
-          <view class="appling" wx:if="{{item.relationship_button == 0}}">申请中</view>
-          <view class="t-toAccreditation project-applicationm" wx:if="{{item.relationship_button == 4}}" data-project="{{item.project_id}}" hover-class='t-other-button-hover' hover-stop-propagation='true' catchtap="matchApply">申请查看</view>
-          <view class="refuseToRead" wx:if="{{item.relationship_button == 1}}">同意查看</view>
-          <view class="refuseToRead t-readed" wx:if="{{item.relationship_button == 3}}">推送给我</view>
-          <view wx:if="{{item.relationship_button == 5}}"></view>
-          <view class="t-toAccreditation" wx:if="{{item.relationship_button == 2}}" data-project="{{item.project_id}}" data-content="{{1}}" catchtap="matchApply">重新申请</view>
-        </view>
-      </view>
-    </view>
-  </block>
-</scroll-view>
-
-
+    </block>
+  </scroll-view>
+</view>
 <view class="floatBtn">
   <view class="t-accreditation flex">
     <view>提交项目，加速融资</view>
