--- a/Weitianshi/pages/my/myNew/myNew.wxml
+++ b/Weitianshi/pages/my/myNew/myNew.wxml
@@ -68,67 +68,75 @@
 </view> -->
 
 
-<view class="myInfo flex" bindtap='toMyCard'>
-  <view class="user_left" catchtap='avatarEdit'>
-    <image wx:if="{{user.user_avatar_url}}" class="user_pic" src="{{user.user_avatar_url}}"></image>
-    <view wx:if="{{user.user_avatar_text}}" class="user_text noPic">{{user.user_avatar_text}}</view>
-    <image wx:if="{{!user}}" class="user_pic" src="/img/img-avatar@3x.png"></image>
+<view class="entryBox flex" wx:if="{{!user}}" bindtap='entry'>
+  <view class="user_left">
+    <image class="user_pic" src="/img/img-touxiang@2x.png"></image>
   </view>
   <view class='user_right'>
-    <view class="userName" wx:if="{{user.user_real_name}}">{{user.user_real_name}}</view>
-    <view class="user_career">
-      <label wx:if="{{user.user_company_career}}">{{user.user_company_career}}</label> ·
-      <label wx:if="{{user.user_company_name}}">{{user.user_company_name}}</label>
-    </view>
-  </view>
-  <view class="flex">
-    <image src="/img/icon-jiantou3@2x.png" class="myArrowStyle"></image>
+    <view class="entryPoint">点击登录</view>
+    <label class='entryContent'>登录只需1秒，就能体验更多功能</label>
   </view>
 </view>
 
-
-
-
-<!--浏览过-->
-<view class="user_down flex">
-  <view class="user_popularity user_tips contacts-sentimentm" bindtap="popularity" hover-class="t-hoverColor">
-    <view wx:if="{{user.user_popularity}}">{{user.user_popularity}}</view>
-    <label class="popularityNum" wx:if="{{count.user_view_new}}">+{{count.user_view_new}}</label>
-    <label wx:if="{{count.user_view_new==0}}"></label>
-    <view wx:if="{{!user.user_popularity}}" class="popularity-Num">{{count.user_view_all}}</view>
-    <view class="popularity-people">浏览过</view>
-  </view>
-  <!--新的好友-->
-  <view class="user_attention user_tips contacts-requestm" bindtap="attention" hover-class="t-hoverColor">
-    <view wx:if="{{user.user_attention}}">{{user.user_attention}}</view>
-    <label class="attentionNum" wx:if="{{count.user_followed_new}}">+{{count.user_followed_new}}</label>
-    <label wx:if="{{count.user_followed_new==0}}"></label>
-    <view wx:if="{{!user.user_attention}}" class="attention-Num">{{count.user_followed_all}}
+<view wx:if="{{user}}">
+  <view class="myInfo flex" bindtap='toMyCard'>
+    <view class="user_left" catchtap='avatarEdit'>
+      <image wx:if="{{user.user_avatar_url}}" class="user_pic" src="{{user.user_avatar_url}}"></image>
+      <view wx:if="{{user.user_avatar_text}}" class="user_text noPic">{{user.user_avatar_text}}</view>
+      <image wx:if="{{!user}}" class="user_pic" src="/img/img-avatar@3x.png"></image>
     </view>
-    <view class="attention-people">Ta的好友</view>
+    <view class='user_right'>
+      <view class="userName" wx:if="{{user.user_real_name}}">{{user.user_real_name}}</view>
+      <view class="user_career">
+        <label wx:if="{{user.user_company_career}}">{{user.user_company_career}}</label> ·
+        <label wx:if="{{user.user_company_name}}">{{user.user_company_name}}</label>
+      </view>
+    </view>
+    <view class="flex">
+      <image src="/img/icon-jiantou3@2x.png" class="myArrowStyle"></image>
+    </view>
   </view>
-  <!-- 收到项目 -->
-  <view class="user_potential user_tips potential-projectm" bindtap="pushTo" hover-class="t-hoverColor">
-    <view wx:if="{{user.user_potential}}">{{user.user_potential}}</view>
-    <label class="potentialNum" wx:if="{{count.project_push_new && show == 1}}">+{{count.project_push_new}}</label>
-    <label class="potentialNum" wx:if="{{count.project_push_new}}">+{{count.project_push_new}}</label>
-    <label wx:if="{{count.project_push_new==0}}"></label>
-    <view wx:if="{{!user.user_attention}}" class="attention-Num">{{count.project_push_all}}</view>
-    <view class="potential-content">收到项目</view>
+
+  <!--浏览过-->
+  <view class="user_down flex">
+    <view class="user_popularity user_tips contacts-sentimentm" bindtap="popularity" hover-class="t-hoverColor">
+      <view wx:if="{{user.user_popularity}}">{{user.user_popularity}}</view>
+      <label class="popularityNum" wx:if="{{count.user_view_new}}">+{{count.user_view_new}}</label>
+      <label wx:if="{{count.user_view_new==0}}"></label>
+      <view wx:if="{{!user.user_popularity}}" class="popularity-Num">{{count.user_view_all}}</view>
+      <view class="popularity-people">浏览过</view>
+    </view>
+    <!--新的好友-->
+    <view class="user_attention user_tips contacts-requestm" bindtap="attention" hover-class="t-hoverColor">
+      <view wx:if="{{user.user_attention}}">{{user.user_attention}}</view>
+      <label class="attentionNum" wx:if="{{count.user_followed_new}}">+{{count.user_followed_new}}</label>
+      <label wx:if="{{count.user_followed_new==0}}"></label>
+      <view wx:if="{{!user.user_attention}}" class="attention-Num">{{count.user_followed_all}}
+      </view>
+      <view class="attention-people">Ta的好友</view>
+    </view>
+    <!-- 收到项目 -->
+    <view class="user_potential user_tips potential-projectm" bindtap="pushTo" hover-class="t-hoverColor">
+      <view wx:if="{{user.user_potential}}">{{user.user_potential}}</view>
+      <label class="potentialNum" wx:if="{{count.project_push_new && show == 1}}">+{{count.project_push_new}}</label>
+      <label class="potentialNum" wx:if="{{count.project_push_new}}">+{{count.project_push_new}}</label>
+      <label wx:if="{{count.project_push_new==0}}"></label>
+      <view wx:if="{{!user.user_attention}}" class="attention-Num">{{count.project_push_all}}</view>
+      <view class="potential-content">收到项目</view>
+    </view>
   </view>
 </view>
 
 <!--项目店铺  -->
 <view class="shopBlock flex" bindtap="projectShop" hover-class="t-hoverColor">
+<view class="flex">
   <image src="/img/icon-xiangmudianpu@2x.png" class="shopPic"></image>
-   <view class="flex" style="align-items:center"> 
+  <view style="align-items:center">
     <view class="shopTitle">项目店铺</view>
     <view class="shopShow">FA专属 · 项目展示 · 案源收集</view>
-   </view> 
-  <view class="flex" style="align-items:center;margin-left:12rpx;">
-    <view class="number">{{count.project_count}}</view>
-    <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
   </view>
+</view>
+  <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
 </view>
 <!--模块内容  -->
 <view class="outSideBox">
@@ -158,10 +166,13 @@
       <image src="/img/icon-renzheng@2x.png" class="blockPic"></image>
       <view class="blockTitle">身份认证</view>
     </view>
-    <view class="blockContent" wx:if="{{status == 0}}" data-status="{{0}}">立即认证</view>
-    <view class="identifyContent" wx:if="{{status == 3}}">审核未通过</view>
-    <view class="identifyContent on" wx:if="{{status == 1}}">审核中</view>
-    <view class="identifyContent" wx:if="{{status == 2}}">{{user.authentication[0].group_title}}</view>
+    <view class='flex'>
+      <view class="blockContent" wx:if="{{status == 0 || !user}}" data-status="{{0}}">立即认证</view>
+      <view class="identifyContent" wx:if="{{status == 3}}">审核未通过</view>
+      <view class="identifyContent on" wx:if="{{status == 1}}">审核中</view>
+      <view class="identifyContent" wx:if="{{status == 2}}">{{user.authentication[0].group_title}}</view>
+      <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
+    </view>
   </view>
   <view class="aline"></view>
   <view class="blockInfo flex" bindtap="contactProject" hover-class="t-hoverColor">
