--- a/Weitianshi/pages/register/bindSuccess/bindSuccess.wxml
+++ b/Weitianshi/pages/register/bindSuccess/bindSuccess.wxml
@@ -1,2 +1,2 @@
 <import src="/pages/Template/Template.wxml" />
-<template is="jumpToWhere" data="{{text:'绑定成功',imgUrls:imgUrls}}"></template>
+<template is="jumpToWhere" data="{{text:'绑定成功',imgUrls:imgUrls,type:1,text2:'确定',disabled,btnName:btnYes}}"></template>
