--- a/Weitianshi/pages/search/search2/search2.wxss
+++ b/Weitianshi/pages/search/search2/search2.wxss
@@ -35,6 +35,7 @@
 .swiper-tab {
   background: #fff;
   z-index: 999;
+  margin-top: 94rpx;
 }
 
 .swiper-tab-list {
@@ -61,12 +62,201 @@
   font-size: 30rpx;
   color: #333;
   text-align: left;
-  font-weight: bold; 
+  font-weight: bold;
 }
+
 .t-applyMyProject .t-careerCompany {
   margin-left: 140rpx;
   margin-bottom: 0;
 }
+
 .t-applyMyProject {
   padding: 32rpx;
+}
+
+/*项目店铺  */
+
+/*名片*/
+
+.outBox {
+  background: white;
+  width: 100%;
+  height: auto;
+}
+
+.insideBox {
+  padding: 32rpx;
+  position: relative;
+}
+
+.insideBox:last-child {
+  border-bottom: none;
+}
+
+.outBox .describle {
+  font-size: 30rpx;
+  color: #333;
+  line-height: 42rpx;
+  text-align: left;
+  margin-bottom: 20rpx;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  font-weight: bold;
+}
+
+.allIndustry {
+  background: #f5f5f5;
+  border-radius: 4rpx;
+  padding: 0 16rpx;
+  height: 50rpx;
+  font-size: 24rpx;
+  color: #666;
+  line-height: 50rpx;
+  text-align: center;
+  margin-right: 16rpx;
+  white-space: nowrap;
+  margin-bottom: 20rpx;
+}
+
+.industryBox {
+  word-break: break-all;
+  flex-wrap: wrap;
+}
+
+.otherInfo {
+  position: relative;
+}
+
+.others_pic {
+  width: 40rpx;
+  height: 40rpx;
+  display: block;
+  margin-right: 16rpx;
+}
+
+.projectDetailLine {
+  color: #666;
+  font-size: 24rpx;
+  line-height: 32rpx;
+  text-align: left;
+  padding-left: 10rpx;
+}
+
+.projectDetailLine:first-child {
+  padding-left: 0;
+}
+
+.projectDetailLine:last-child {
+  border-right: none;
+}
+
+.allProjectDetail {
+  font-size: 26rpx;
+  color: #666;
+  line-height: 26rpx;
+  text-align: left;
+}
+
+.userInfo {
+  width: 460rpx;
+  margin-top: 9rpx;
+}
+
+.online {
+  align-items: flex-end;
+  margin-bottom: 16rpx;
+  position: relative;
+}
+
+.line {
+  align-items: flex-end;
+  margin-top: -30rpx;
+}
+
+.userCareer {
+  font-size: 28rpx;
+  color: #999;
+  line-height: 24rpx;
+  text-align: left;
+  width: 500rpx;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.userName {
+  font-size: 28rpx;
+  color: #999;
+  line-height: 24rpx;
+  text-align: left;
+  max-width: 400rpx;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.userCareer {
+  margin-right: 16rpx;
+  white-space: nowrap;
+  width: auto;
+  text-overflow: clip;
+  overflow: none;
+}
+
+.projectInfo {
+  height: 72rpx;
+  position: relative;
+}
+
+#time {
+  font-size: 20rpx;
+  color: #999;
+  line-height: 20rpx;
+  text-align: right;
+  margin: 10rpx 0 20rpx 0;
+}
+
+.noLight {
+  color: #666;
+}
+
+.projectDetailType {
+  height: 92rpx;
+  width: 92rpx;
+  right: 0rpx;
+  top: 0rpx;
+  position: absolute;
+}
+
+.highBox {
+  height: 98rpx;
+}
+
+/*投资机构  */
+
+#investment .investGroupBlock {
+  padding: 40rpx  0 0 0;
+}
+.more {
+  font-size: 24rpx;
+  color: #3378e0;
+  text-align: center;
+}
+.outPadding {
+  padding: 20rpx 0;
+}
+.t-userName {
+  font-size: 36rpx;
+  color: #333;
+  line-height: 38rpx;
+  text-align: left;
+  margin-right: 16rpx;
+  align-items: flex-end;
+  max-width: 400rpx;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
