--- a/Weitianshi/pages/search/search2/search2.wxml
+++ b/Weitianshi/pages/search/search2/search2.wxml
@@ -15,83 +15,85 @@
 
 
 <view wx:if="{{show}}">
-<view class="swiper-tab">
-  <view class="swiper-tab-list {{currentTab == 0 ? 'on' : ''}}" data-current="0" bindtap="swichNav">全部</view>
-  <view class="swiper-tab-list {{currentTab == 1 ? 'on' : ''}}" data-current="1" bindtap="swichNav">项目</view>
-  <view class="swiper-tab-list {{currentTab == 2 ? 'on' : ''}}" data-current="2" bindtap="swichNav">投资机构</view>
-  <view class="swiper-tab-list {{currentTab == 3 ? 'on' : ''}}" data-current="3" bindtap="swichNav">投资人</view>
-  <view class="swiper-tab-list {{currentTab == 4 ? 'on' : ''}}" data-current="4" bindtap="swichNav">FA</view>
-</view>
+  <view class="swiper-tab">
+    <view class="swiper-tab-list {{currentTab == 0 ? 'on' : ''}}" data-current="0" bindtap="swichNav">全部</view>
+    <view class="swiper-tab-list {{currentTab == 1 ? 'on' : ''}}" data-current="1" bindtap="swichNav">项目</view>
+    <view class="swiper-tab-list {{currentTab == 2 ? 'on' : ''}}" data-current="2" bindtap="swichNav">投资机构</view>
+    <view class="swiper-tab-list {{currentTab == 3 ? 'on' : ''}}" data-current="3" bindtap="swichNav">投资人</view>
+    <view class="swiper-tab-list {{currentTab == 4 ? 'on' : ''}}" data-current="4" bindtap="swichNav">FA</view>
+  </view>
 
-<swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:1020rpx" bindchange="bindChange">
-  <swiper-item data-current='0'>
-    <scroll-view style="height:100%;" scroll-y="true">
-      <view class="outStyleBox" id="projects" wx:if="{{projects_list.length != 0}}">
-        <view class="blockTitle2">项目</view>
-        <template is="shopProject" data="{{myProject:projects_list,currentTab,index,currentTab:0,number:3}}"></template>
-        <view class="outPadding" bindtap='jumpToSearch' data-current="1">
-          <view class="more" wx:if="{{searchData.projects_list.list.length >= 3}}">更多</view>
+  <swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:1020rpx" bindchange="bindChange">
+    <swiper-item data-current='0'>
+      <scroll-view style="height:100%;" scroll-y="true">
+        <view class="outStyleBox" id="projects" wx:if="{{projects_list.length != 0}}">
+          <view class="blockTitle2">项目</view>
+          <template is="shopProject" data="{{myProject:projects_list,currentTab,index,currentTab:0,number:3,showAfter}}"></template>
+          <view class="outPadding" bindtap='jumpToSearch' data-current="1">
+            <view class="more" wx:if="{{searchData.projects_list.list.length >= 3}}">更多</view>
+          </view>
         </view>
-      </view>
-      <view class="outStyleBox1" id="investment" wx:if="{{investments_list.length != 0}}">
-        <view class="blockTitle2">投资机构</view>
-        <template is="investment" data="{{investment_list:investments_list,index,currentTab:0,number:3}}"></template>
-        <view class="outPadding" bindtap='jumpToSearch' data-current="2">
-          <view class="more" wx:if="{{searchData.investments_list.list.length >= 3}}">更多</view>
+        <view class="outStyleBox1" id="investment" wx:if="{{investments_list.length != 0}}">
+          <view class="blockTitle2">投资机构</view>
+          <template is="investment" data="{{investment_list:investments_list,index,currentTab:0,number:3}}"></template>
+          <view class="outPadding" bindtap='jumpToSearch' data-current="2">
+            <view class="more" wx:if="{{searchData.investments_list.list.length >= 3}}">更多</view>
+          </view>
         </view>
-      </view>
-      <view class="outStyleBox" id="investor" wx:if="{{investors_list.length != 0}}">
-        <view class="blockTitle">投资人</view>
-        <template is='investorModel' data='{{personList:investors_list,user_id,currentTab:0,number:3}}'></template>
-        <view class="outPadding" bindtap='jumpToSearch' data-current="3">
-          <view class="more" wx:if="{{searchData.investors_list.list.length >= 3}}" bindtap="toMember">更多</view>
+        <view class="outStyleBox" id="investor" wx:if="{{investors_list.length != 0}}">
+          <view class="blockTitle">投资人</view>
+          <template is='investorModel' data='{{personList:investors_list,user_id,currentTab:0,number:3}}'></template>
+          <view class="outPadding" bindtap='jumpToSearch' data-current="3">
+            <view class="more" wx:if="{{searchData.investors_list.list.length >= 3}}" bindtap="toMember">更多</view>
+          </view>
         </view>
-      </view>
-      <view class="outStyleBox" id="faPerson" wx:if="{{fa_list.length != 0}}">
-        <view class="blockTitle">FA(融资顾问)</view>
-        <template is="investorModel" data="{{personList:fa_list,user_id,currentTab:0,number:3}}"></template>
-        <view class="outPadding" bindtap='jumpToSearch' data-current="4">
-          <view class="more" wx:if="{{searchData.fa_list.list.length >= 3}}" bindtap="toMember">更多</view>
+        <view class="outStyleBox" id="faPerson" wx:if="{{fa_list.length != 0}}">
+          <view class="blockTitle">FA(融资顾问)</view>
+          <template is="investorModel" data="{{personList:fa_list,user_id,currentTab:0,number:3}}"></template>
+          <view class="outPadding" bindtap='jumpToSearch' data-current="4">
+            <view class="more" wx:if="{{searchData.fa_list.list.length >= 3}}" bindtap="toMember">更多</view>
+          </view>
         </view>
-      </view>
-      <view class="hasNothing" wx:if="{{investment_list.length ==0 &&industry_list.length == 0 && memberList.list.length == 0}}">暂无数据</view>
-    </scroll-view>
-  </swiper-item>
-  <swiper-item data-current='1' bindscrolltolower='loadMore'>
-    <scroll-view style="height:100%;" scroll-y="true" bindscrolltolower='loadMore' data-current='1'>
-      <view class="outStyleBox" wx:if="{{projects_list.length != 0}}">
-        <template is="shopProject" data="{{myProject:projects_list}}"></template>
-      </view>
-      <view class="outPadding">
-        <view class="hasNothing" wx:if="{{projects_list.length ==0}}">暂无数据</view>
-      </view>
-    </scroll-view>
-  </swiper-item>
-  <swiper-item data-current='2'>
-    <scroll-view style="height:100%;" scroll-y="true" bindscrolltolower='loadMore'>
-      <view class="outStyleBox1" wx:if="{{investments_list.length != 0}}">
-        <template is="investment" data="{{investment_list:investments_list,index}}"></template>
-      </view>
-      <view class="hasNothing" wx:if="{{investments_list.length == 0}}">暂无数据</view>
-    </scroll-view>
-  </swiper-item>
-  <swiper-item data-current='3' bindscrolltolower='loadMore'>
-    <scroll-view style="height:100%;" scroll-y="true" wx:if="{{investors_list.length != 0}}" bindscrolltolower='loadMore' data-current='3'>
-      <view class="outStyleBox" wx:if="{{investors_list.length != 0}}">
-        <template is='investorModel' data='{{personList:investors_list,user_id}}'></template>
-      </view>
-      <view class="hasNothing" wx:if="{{investors_list.length == 0}}">暂无数据</view>
-    </scroll-view>
-  </swiper-item>
-  <swiper-item data-current='4' bindscrolltolower='loadMore'>
-    <scroll-view style="height:100%;" scroll-y="true" wx:if="{{fa_list.length != 0}}" bindscrolltolower='loadMore' data-current='3'>
-      <view class="outStyleBox" wx:if="{{fa_list.list.length != 0}}">
-        <template is="investorModel" data="{{personList:fa_list,user_id}}"></template>
-      </view>
-      <view class="hasNothing" wx:if="{{fa_list.length == 0}}">暂无数据</view>
-    </scroll-view>
-  </swiper-item>
-</swiper>
+        <view class="hasNothing" wx:if="{{investment_list.length ==0 &&industry_list.length == 0 && memberList.list.length == 0}}">暂无数据</view>
+      </scroll-view>
+    </swiper-item>
+    <swiper-item data-current='1' bindscrolltolower='loadMore'>
+      <scroll-view style="height:100%;" scroll-y="true" bindscrolltolower='loadMore' data-current='1'>
+        <view class="outStyleBox" wx:if="{{projects_list.length != 0}}">
+          <template is="shopProject" data="{{myProject:projects_list}}"></template>
+        </view>
+        <template is="isEmpty" data="{{emptyNumber:projects_list}}"></template>
+        <template is="theBottom" wx:if="{{atBottom == true && projects_list !=''}}"></template>
+      </scroll-view>
+    </swiper-item>
+    <swiper-item data-current='2'>
+      <scroll-view style="height:100%;" scroll-y="true" bindscrolltolower='loadMore' data-current='2'>
+        <view class="outStyleBox1" wx:if="{{investments_list.length != 0}}">
+          <template is="investment" data="{{investment_list:investments_list,index}}"></template>
+        </view>
+        <template is="isEmpty" data="{{emptyNumber:investments_list}}"></template>
+        <template is="theBottom" wx:if="{{atBottom == true && investments_list !=''}}"></template>
+      </scroll-view>
+    </swiper-item>
+    <swiper-item data-current='3' bindscrolltolower='loadMore'>
+      <scroll-view style="height:100%;" scroll-y="true" bindscrolltolower='loadMore' data-current='3'>
+        <view class="outStyleBox" wx:if="{{investors_list.length != 0}}">
+          <template is='investorModel' data='{{personList:investors_list,user_id}}'></template>
+        </view>
+        <template is="isEmpty" data="{{emptyNumber:investors_list!=''}}"></template>
+        <template is="theBottom" wx:if="{{atBottom == true && investors_list != ''}}"></template>
+      </scroll-view>
+    </swiper-item>
+    <swiper-item data-current='4' bindscrolltolower='loadMore'>
+      <scroll-view style="height:100%;" scroll-y="true" bindscrolltolower='loadMore' data-current='3'>
+        <view class="outStyleBox" wx:if="{{fa_list.list.length != 0}}">
+          <template is="investorModel" data="{{personList:fa_list,user_id}}"></template>
+        </view>
+        <template is="isEmpty" data="{{emptyNumber:fa_list !=''}}"></template>
+        <template is="theBottom" wx:if="{{atBottom == true && fa_list != ''}}"></template>
+      </scroll-view>
+    </swiper-item>
+  </swiper>
 </view>
 
 <!--投资人  -->
