--- a/Weitianshi/pages/Template/Template.wxml
+++ b/Weitianshi/pages/Template/Template.wxml
@@ -1008,7 +1008,7 @@
       <view class="t-bindSuccess">{{text}}</view>
       <view class="t-bindSuccessContent">{{content}}</view>
     </view>
-    <view class='t-customService'>联系客服</view>
+    <button class='t-customService' open-type='contact'>联系客服</button>
   </view>
   <image src="{{imgUrls}}" class="t-picAfter"></image>
   <view class="floatBtn buttonTwo" bindtap="{{btnName}}" wx:if="{{type==1}}">
@@ -1464,7 +1464,7 @@
           <view class='flex otherInfo'>
             <view class="allProjectDetail flex " wx:if="{{item.pro_area != ''||item.pro_finance_stock_after!=0||item.pro_stage!=''||item.pro_scale!=''}}">
               <view class="projectDetailLine" wx:if="{{item.pro_scale != ''}}">{{item.pro_scale.scale_money}} </view>
-              <view class="projectDetailLine" wx:if="{{item.pro_finance_stock_after != ''}}">· {{item.pro_finance_stock_after}}% </view>
+              <view class="projectDetailLine" wx:if="{{item.pro_finance_stock_after}}">· {{item.pro_finance_stock_after}}% </view>
               <view class="projectDetailLine" wx:if="{{item.pro_stage != ''}}"> · {{item.pro_stage.stage_name}}</view>
               <view class="projectDetailLine" wx:if="{{item.pro_area != ''}}">· {{item.pro_area.area_title}}</view>
             </view>
