--- a/Weitianshi/pages/myProject/publishProject/publishProject.wxml
+++ b/Weitianshi/pages/myProject/publishProject/publishProject.wxml
@@ -1,131 +1,5 @@
 <import src="/pages/Template/Template.wxml" />
 <template is="pointPC">用电脑创建项目，体验更好更流畅</template>
-<!-- <view id="myProject">
-  <view class="card">
-    <view class="text">项目名称</view>
-    <input placeholder="仅自己可见" placeholder-style='color:#ccc' class="newBox" bindinput="projectName" maxlength="40" value="{{projectName}}" />
-  </view>
-  <view class="card">
-    <view class="text">公司名称</view>
-    <input placeholder="仅自己可见" placeholder-style='color:#ccc' class="newBox" bindinput="companyName" maxlength="40" value="{{companyName}}" />
-  </view>
-  <view class="card">
-    <view class="text">项目介绍*</view>
-    <input placeholder="一句话介绍,30字以内." placeholder-style='color:#ccc' bindblur="bindTextAreaBlur" maxlength="40" value="{{describe}}" />
-  </view>
-  <template is="input_jump" data="{{...industryCard}}"></template>
-  <view class="card">
-    <view class="text">项目阶段*</view>
-    <picker id="stage" bindchange="stage" value="{{stage_index}}" range="{{stage_arry}}">
-      <view class="slect flex">
-        <view class="{{stage_index ==0 ? '' : 'checkOn'}}">{{stage[stage_index].stage_name || "选择阶段"}} </view>
-        <image class="downArrow" src="/img/downArrow.png"></image>
-      </view>
-    </picker>
-  </view>
-  <view class="card">
-    <view class="text">期望融资*</view>
-    <picker id="expect" bindchange="scale" value="{{scale_index}}" range="{{scale_arry}}">
-      <view class="slect flex">
-        <view class="{{scale_index ==0 ? '' : 'checkOn'}}">{{scale[scale_index].scale_money || "选择金额"}} </view>
-        <image class="downArrow" src="/img/downArrow.png"></image>
-      </view>
-    </picker>
-  </view>
-  <view class="card">
-    <view class="text">所在地区*</view>
-    <navigator url="/pages/form/area1/area1?current=0" id="belongArea">
-      <view id="belongArea" class="slect flex">
-        <view class="{{area_title =='选择城市' ? '':'checkOn'}}">{{area_title}}</view>
-        <image class="downArrow" src="/img/downArrow.png"></image>
-      </view>
-    </navigator>
-  </view>
-  <view class="card card_tips">
-    <view class="text">是否独家*</view>
-    <view class="flex">
-      <view class="tips {{tips_index==1 ? 'tips_on' : ''}}" id="tips1" bindtap="tipsOn" data-tips="1">独家签约</view>
-      <view class="tips {{tips_index==2 ? 'tips_on' : ''}}" id="tips2" bindtap="tipsOn" data-tips="2">非独家</view>
-      <view class="tips {{tips_index==0 ? 'tips_on' : ''}}" id="tips3" bindtap="tipsOn" data-tips="0">其他</view>
-    </view>
-  </view>
-  <view class="card">
-    <view class="text">项目亮点*</view>
-    <input class="slectInput" placeholder="请输入项目亮点" placeholder-style='color:#ccc' value="{{pro_goodness}}" bindblur="slectInput" maxlength="500" />
-  </view> -->
-
-<!--错语提示-->
-<view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
-
-<!--加载更多-->
-<!-- <view class="weui-loadmore" wx:if="{{loading=='1'}}">
-    <view class="weui-loading"></view>
-    <view class="weui-loadmore__tips">正在加载</view>
-  </view>
-</view>  -->
-<!-- <view class="topBox">
-  <view class="userBox">
-    <view class="projectBoxContent flex" bindtap="toPc">
-      <view class="projectTitle">商业计划书</view>
-      <view class="flex">
-        <view class="projectContent">去电脑上传</view>
-        <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
-      </view>
-    </view>
-  </view>
-  <view class="userBox"  hover-class='t-hoverColor'>
-    <view class="projectBoxContent flex">
-      <view class="projectTitle">投后股份(%)*</view>
-      <view class="flex">
-        <input class="projectContentInput newBox" placeholder="请输入投后股权占比" placeholder-style="color:#ccc" bindinput="projectFinance" value='{{pro_finance_stock_after}}' />
-        <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
-      </view>
-    </view>
-  </view>
-  <view class="userBox" hover-class='t-hoverColor'>
-    <view class="projectBoxContent flex noBorder" bindtap="initPrivacy">
-      <view class="projectTitle">私密性设置</view>
-      <view class="flex">
-        <view class="projectContent">请选择</view>
-        <image src="/img/icon-jiantou3@2x.png" class="arrowStyle"></image>
-      </view>
-    </view>
-  </view>
-</view>
-<view class="tipsNew flex">
-  <image src="/img/icon-zhuyi@2x.png" class="tipsPic"></image>
-  <view class="tipsContent">未经您的许可，项目数据绝对私密安全</view>
-</view>
-<view>
-  <view class="choiceBox flex" wx:if="{{!yesData}}">
-    <view class="content">需要Bp美化</view>
-    <switch bindchange="switchChange1" class="switchTab" checked="{{service_ps_bp}}" />
-  </view>
-  <view class="choiceBox flex" wx:if="{{!yesData}}">
-    <view class="content">需要融资顾问（FA）服务</view>
-    <switch bindchange="switchChange2" class="switchTab" checked="{{service_fa}}" />
-  </view>
-</view>
-<view wx:if="{{yesData}}">
-  <view class="choiceBox flex">
-    <view class="content">是否需要云投行（FA）合作</view>
-    <switch bindchange="switchChange3" class="switchTab" checked="{{service_yun}}" />
-  </view>
-</view>
-<view class="question" wx:if="{{group_id != 21&& group_id != 18 && group_id != 6}}">
-  <view class="questionWhy">Q：什么是融资顾问服务</view>
-  <view class="answer">A：微天使平台会结合您的融资需求推荐最适合的FA，帮助您打磨 商业计划，梳理BP，引荐投资机构。（业务同学会通过您在平台 留下的联系方式与您沟通具体融资需求）
-  </view>
-</view>
-<view class="question" wx:if="{{group_id == 21|| group_id == 18 || group_id == 6}}">
-  <view class="questionWhy">Q：什么是云投行合作</view>
-  <view class="answer">A：微天使平台将协助您寻找最合适的投资机构，并与合作伙伴共同协助推进您的项目融资。（业务同学会通过您在平台留下的联系方式与您沟通具体合作方式）
-  </view>
-</view>  -->
-<!-- <view class="highBox"></view> -->
-
-<!--保存  -->
-<template is="buttonOne" data="{{text:buttonOneText,btnName:'public',disabled}}"></template>
 
 <view class="modalBox" hidden="{{modalBox==0}}">
   <view class="classname" bindtap="closeModal">
@@ -148,7 +22,7 @@
     <view class="projectBoxContent flex noBorder" bindtap="industryChoice">
       <view class="projectTitle">项目领域</view>
       <view class="flex">
-        <view class="projectContent">{{industryCard.value}}</view>
+        <view class="projectContent {{industryCard.value == '最多选择5个' ? 'noCheck' : 'checkOn'}}">{{industryCard.value}}</view>
       </view>
     </view>
   </view>
@@ -156,7 +30,7 @@
   <view class="card flex">
     <label class="cardTitle">是否独家</label>
     <picker id="exclusive" bindchange="tipsOn" range="{{exclusive_arry}}" value='{{tips_index}}'>
-      <view class="projectContent">{{exclusive_arry[tips_index] || "请选择"}} </view>
+      <view class="{{tips_index == 0 ? 'noCheck' : 'checkOn'}} projectContent  newContent">{{exclusive_arry[tips_index] || "请选择"}} </view>
     </picker>
   </view>
   <view class="aLine"></view>
@@ -165,7 +39,7 @@
       <view class="littleTitle">阶段</view>
       <view class="littleContent">
         <picker id="stage" bindchange="stage" value="{{stage_index}}" range="{{stage_arry}}">
-          <view class="{{stage_index ==0 ? '' : 'checkOn'}}">{{stage[stage_index].stage_name || "请选择"}} </view>
+          <view class="{{stage_index == 0 ? 'noCheck' : 'checkOn'}}">{{stage[stage_index].stage_name || "请选择"}} </view>
         </picker>
       </view>
     </view>
@@ -173,7 +47,7 @@
       <view class="littleTitle">期望融资</view>
       <view class="littleContent">
         <picker id="expect" bindchange="scale" value="{{scale_index}}" range="{{scale_arry}}">
-          <view class="{{scale_index ==0 ? '' : 'checkOn'}}">{{scale[scale_index].scale_money || "选择金额"}}</view>
+          <view class="{{scale_index ==0 ? 'noCheck' : 'checkOn'}}">{{scale[scale_index].scale_money || "选择金额"}}</view>
         </picker>
       </view>
     </view>
@@ -181,22 +55,13 @@
       <view class="littleTitle">地区</view>
       <view class="littleContent">
         <navigator url="/pages/form/area1/area1?current=0" id="belongArea">
-          <view>{{area_title}}</view>
+          <view class="{{cityNum == '' ? 'noCheck' : 'checkOn'}}">{{area_title}}</view>
         </navigator>
       </view>
     </view>
   </view>
 </view>
 
-
-
-
-
-
-<!-- <view class="card flex" hover-class='t-hoverColor'>
-  <label class="cardTitle">投后股份(%)</label>
-  <input class="projectContentInput" placeholder="请输入投后股权占比" placeholder-style="color:#ccc" bindinput="projectFinance" value='{{pro_finance_stock_after}}' />
-</view> -->
 <view style='background:white;'>
   <view class="userBox" hover-class='t-hoverColor'>
     <view class="projectBoxContent flex noBorder" bindtap="initPrivacy">
@@ -226,11 +91,13 @@
     </view>
   </view>
 </view>
+
 <view class="question" wx:if="{{group_id != 21&& group_id != 18 && group_id != 6}}">
   <view class="questionWhy">Q：什么是融资顾问服务</view>
   <view class="answer">A：微天使平台会结合您的融资需求推荐最适合的FA，帮助您打磨 商业计划，梳理BP，引荐投资机构。（业务同学会通过您在平台 留下的联系方式与您沟通具体融资需求）
   </view>
 </view>
+
 <view class="question" wx:if="{{group_id == 21|| group_id == 18 || group_id == 6}}">
   <view class="questionWhy">Q：什么是云投行合作</view>
   <view class="answer">A：微天使平台将协助您寻找最合适的投资机构，并与合作伙伴共同协助推进您的项目融资。（业务同学会通过您在平台留下的联系方式与您沟通具体合作方式）
@@ -239,3 +106,5 @@
 
 <template is="buttonTwo" data="{{text:'保存',btnName:'public',disabled}}"></template>
 <view class="highBox"></view>
+
+<view class="error" wx:if="{{error=='1'}}">{{error_text}}</view>
